# JJs-Event-Agent

./: .env.example  .gitignore  LICENSE  README.md  index.html  pyproject.toml
.github/workflows/: scraper.yml
docs/: DEMO_VIDEO_SCRIPT.md  DEVPOST_SUBMISSION.md
src/event_agent/: __init__.py  __main__.py  bootstrap.py  cli.py  config.py  extraction.py  filters.py  models.py  pipeline.py
src/event_agent/outputs/: __init__.py  dashboard.py  email.py  telegram_bot.py
src/event_agent/sources/: __init__.py  base.py  browser_utils.py  eventbrite.py  gdg.py  linkedin.py  luma.py  public_web.py  telegram_user.py  whatsapp.py
src/event_agent/templates/: index.html.j2
tests/: test_browser_utils.py  test_config.py  test_email.py  test_eventbrite.py  test_extraction.py  test_filters.py  test_gdg.py  test_luma.py  test_models.py  test_outputs.py  test_public_web.py
