[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "jjs-event-agent"
version = "1.0.0"
description = "A Singapore-focused event discovery agent with admission confidence and a live dashboard."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Jeraldine" }]
dependencies = [
  "beautifulsoup4>=4.12.3,<5",
  "dateparser>=1.2.1,<2",
  "Jinja2>=3.1.5,<4",
  "playwright>=1.49.1,<2",
  "python-dateutil>=2.9.0.post0,<3",
  "python-dotenv>=1.0.1,<2",
  "requests>=2.32.3,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.4,<9",
  "pytest-cov>=6.0.0,<7",
  "ruff>=0.9.2,<1",
]

[project.scripts]
jjs-event-agent = "event_agent.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/event_agent"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
